--- a/www/index.html
+++ b/www/index.html
@@ -8,21 +8,21 @@
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Page description">
+    <meta name="description" content="Сервис для обработки документов Росреестра в формате XML. На RRDoc можно храненить любое количество ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF или форматы популярных геоинформационных систем.">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@publisher_handle">
-    <meta name="twitter:title" content="Page Title">
-    <meta name="twitter:description" content="Page description less than 200 characters">
-    <meta name="twitter:creator" content="@author_handle">
+    <meta name="twitter:title" content="Заказать кпт в электронном виде росреестр">
+    <meta name="twitter:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем.">
+    <meta name="twitter:creator" content="it-thematic">
     <meta name="twitter:image" content="http://www.example.com/image.jpg">
-    <meta property="og:title" content="Title Here">
+    <meta property="og:title" content="Заказать кпт в электронном виде росреестр">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.example.com/">
     <meta property="og:image" content="http://example.com/image.jpg">
-    <meta property="og:description" content="Description Here">
-    <meta property="og:site_name" content="Site Name, i.e. Moz">
+    <meta property="og:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем.">
+    <meta property="og:site_name" content="RRDoc">
     <meta property="fb:admins" content="Facebook numeric ID">
-    <link href="static/css/index.css" rel="stylesheet">
+    <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicon/apple-touch-icon.png">
     <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon/favicon-32x32.png">
@@ -139,6 +139,7 @@
             <li><span class="js-links" data-to="prices">Цены</span></li>
             <li><span class="js-links" data-to="conditions">Условия</span></li>
             <li><span class="js-links" data-to="contacts">Контакты</span></li>
+            <li><span><a href="http://wiki.itt/x/AoDLAQ">API</a></span></li>
           </ul>
         </nav>
         <div class="header-burger js-burger"><span></span><span></span><span></span></div>
@@ -148,7 +149,7 @@
       <section class="intro js-section">
         <div class="container">
           <div class="intro-text">
-            <h1>Ваше решение по обработке сведений кадастра недвижимости</h1><a href="https://rrdoc.ru/">Попробовать</a>
+            <h1>Ваше решение по обработке сведений кадастра недвижимости</h1><a href="https://rrdoc.ru/login">Войти</a>
           </div>
           <div class="intro-image"><img src="./static/img/intro.png" alt="Intro image" /></div>
         </div>
@@ -305,7 +306,7 @@
                   <li class="inActive">Приоритетная техническая и консультационная поддержка по телефону</li>
                 </ul>
               </div>
-              <div class="card-bottom"><span class="price">0 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">0 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
             <div class="prices-card">
               <div class="card-top">
@@ -319,7 +320,7 @@
                   <li class="inActive">Приоритетная техническая и консультационная поддержка по телефону</li>
                 </ul>
               </div>
-              <div class="card-bottom"><span class="price">100 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">100 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
             <div class="prices-card">
               <div class="card-top">
@@ -340,7 +341,7 @@
                   <p>лицензия на геоинформационную систему geom (для каждого пользователя)</p>
                 </div>
               </div>
-              <div class="card-bottom"><span class="price">175 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">175 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
           </div>
           <p class="gray-text">* возможно заключение договора с юридическим лицом.</p>
@@ -505,6 +506,6 @@
             </svg></button><iframe width="100%" height="445" src="https://www.youtube.com/embed/hjAJUt6wtzU" frameborder="0" style="border-radius: 5px" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       </div>
     </div><button class="hideTriggerFeedback js-open-p" data-open="youtube"></button><!-- Scripts-->
-    <script src="static/js/index.js"></script>
+    <script src="static/js/index.min.js"></script>
   </body>
 </html>
