--- a/welcome/index.html
+++ b/welcome/index.html
@@ -8,19 +8,19 @@
     <meta name="theme-color" content="#fff">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="Page description">
+    <meta name="description" content="Сервис для обработки документов Росреестра в формате XML. На RRDoc можно храненить любое количество ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF или форматы популярных геоинформационных систем.">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@publisher_handle">
-    <meta name="twitter:title" content="Page Title">
-    <meta name="twitter:description" content="Page description less than 200 characters">
-    <meta name="twitter:creator" content="@author_handle">
+    <meta name="twitter:title" content="Заказать кпт в электронном виде росреестр">
+    <meta name="twitter:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем.">
+    <meta name="twitter:creator" content="it-thematic">
     <meta name="twitter:image" content="http://www.example.com/image.jpg">
-    <meta property="og:title" content="Title Here">
+    <meta property="og:title" content="Заказать кпт в электронном виде росреестр">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.example.com/">
     <meta property="og:image" content="http://example.com/image.jpg">
-    <meta property="og:description" content="Description Here">
-    <meta property="og:site_name" content="Site Name, i.e. Moz">
+    <meta property="og:description" content="Сервис для обработки сведений кадастра недвижимости - электронных документов Росреестра в формате XML. RRDoc предоставляет возможность организовать хранение любого количества ваших документов, а также выполнять конвертацию выписок ЕГРН, КПТ, межевых планов и других документов из XML формата в человеко-читаемый вид в формате PDF, в форматы популярных геоинформационных систем.">
+    <meta property="og:site_name" content="RRDoc">
     <meta property="fb:admins" content="Facebook numeric ID">
     <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicon/apple-touch-icon.png">
@@ -141,11 +141,6 @@
             <li><span class="js-links" data-to="contacts">Контакты</span></li>
           </ul>
         </nav>
-        <div class="header-btns"><button class="header-button header-button--registration js-open-p" data-open="registration-popup"><svg class="icon-registration ">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-registration"></use>
-            </svg><span>Регистрация</span></button><button class="header-button header-button--login js-open-p" data-open="login-popup"><svg class="icon-user ">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-user"></use>
-            </svg><span>Вход</span></button></div>
         <div class="header-burger js-burger"><span></span><span></span><span></span></div>
       </div>
     </header><!-- Main content-->
@@ -153,7 +148,7 @@
       <section class="intro js-section">
         <div class="container">
           <div class="intro-text">
-            <h1>Ваше решение по обработке сведений кадастра недвижимости</h1><a href="https://rrdoc.ru/">Попробовать</a>
+            <h1>Ваше решение по обработке сведений кадастра недвижимости</h1><a href="https://rrdoc.ru/login">Войти</a>
           </div>
           <div class="intro-image"><img src="./static/img/intro.png" alt="Intro image" /></div>
         </div>
@@ -310,7 +305,7 @@
                   <li class="inActive">Приоритетная техническая и консультационная поддержка по телефону</li>
                 </ul>
               </div>
-              <div class="card-bottom"><span class="price">0 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">0 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
             <div class="prices-card">
               <div class="card-top">
@@ -324,7 +319,7 @@
                   <li class="inActive">Приоритетная техническая и консультационная поддержка по телефону</li>
                 </ul>
               </div>
-              <div class="card-bottom"><span class="price">100 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">100 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
             <div class="prices-card">
               <div class="card-top">
@@ -345,7 +340,7 @@
                   <p>лицензия на геоинформационную систему geom (для каждого пользователя)</p>
                 </div>
               </div>
-              <div class="card-bottom"><span class="price">175 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose js-open-p" data-open="choose-tariff">Выбрать</button></div>
+              <div class="card-bottom"><span class="price">175 &#8381;</span><span class="duration">мес/пользователь</span><button class="choose">Выбрать</button></div>
             </div>
           </div>
           <p class="gray-text">* возможно заключение договора с юридическим лицом.</p>
@@ -510,6 +505,6 @@
             </svg></button><iframe width="100%" height="445" src="https://www.youtube.com/embed/hjAJUt6wtzU" frameborder="0" style="border-radius: 5px" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       </div>
     </div><button class="hideTriggerFeedback js-open-p" data-open="youtube"></button><!-- Scripts-->
-    <script src="static/js/index.min.js"></script>
+    <script src="static/js/index.min.js?version=5"></script>
   </body>
 </html>
